# ONNXRuntimeExample

./: README.md
nocmake/: Makefile  download.sh
with_cmake/: .gitignore  CMakeLists.txt  doit.sh  main.c
without_cmake/: .gitignore  Makefile  doit.sh
